<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETA</string>
    <string name="action_settings">Settings</string>
    <string name="create_trips">Create Trip</string>
    <string name="view_trip">View Trip</string>

    <string name="trip_name">Name</string>
    <string name="trip_destination">Destination</string>
    <string name="trip_date">Date</string>
    <string name="trip_time">Time</string>
    <string name="trip_friends">Friends</string>

    <string name="create_trip">Create</string>
    <string name="cancel_trip">Cancel</string>

</resources>
